Bug 149176 - When on the document turn off "Save autorecovery information every "10" minutes" after the document save every 10 minutes.
Summary: When on the document turn off "Save autorecovery information every "10" minut...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0
Keywords:
: 143751 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-19 12:00 UTC by NISZ LibreOffice Team
Modified: 2023-04-04 12:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-05-19 12:00:44 UTC
Description:
When on the document turn off "Save autorecovery information every "10" minutes" after the document save every 10 minutes.

Steps to Reproduce:
1. Creat a new document writer or calc
2. Clikk Tools/Options/Load and save/General/Save menu
3. Turn off "Save Autorecovery information every "10" minutes" option.
4. Edit files and do not save them manually
5. Wait "~11" minutes.

Actual Results:
The Options to save the AutoRecovery information had earlier been turned off, it still saves every 10 minutes.


Expected Results:
The document doesn't saving autorecovery.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 817b8fe7001a83cb74910eb09b7c14a3b95b8a39
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2022-05-23 07:01:01 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aeb8a0076cd5ec2836b3dfc1adffcced432f995f

tdf#149176 tdf#149178 fix Save autorecovery information.. option

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 NISZ LibreOffice Team 2022-05-30 11:14:28 UTC
It is work normal but If you make any change to the Autorecovery information option you should restart LO.

Verified in:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 212cb61fb6adc05395b9f9afe0dacbd6594ae06b
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 3 Mike Kaganski 2022-06-08 05:37:33 UTC
*** Bug 143751 has been marked as a duplicate of this bug. ***
Comment 4 Mike Kaganski 2022-07-18 15:25:55 UTC
Possibly related: commit 134f40136a9bea265d8f2fedfdb41a1e65d81b49.