tdf#149176 tdf#149178 fix Save autorecovery information.. option

Autorecovery information was saved in every 10 minutes,
regardless of the "Save Autorecovery information every" setting.

Change-Id: I1a52da2fa5febb53c270a8db7472e9a8c0e4c426